@@ -68,6 +68,7 @@ Mike Blumenkrantz <michael.blumenkrantz@gmail.com>
 Lionel Orry <lionel.orry@gmail.com>
 Jérôme Pinot <ngc891@gmail.com>
 Leandro Santiago <leandrosansilva@gmail.com>
+Christophe Sadoine <chris@indefini.org>
 
 Eo
 --
