@@ -47,6 +47,7 @@ Additions:
      - Add eet_data_descriptor_name_get()
      - Add support EET_T_VALUE
      - Add EET_DATA_DESCRIPTOR_ADD_SUB_NESTED()
+     - Add EET_DATA_DESCRIPTOR_ADD_MAPPING_BASIC()
     * Eo:
      - Add generic efl object infrastructure
      - Add debugging facility
